[package]
name = "subway_sprigsters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = "2"
embedded-graphics = "0.7.1"
trowel = { version = "1.0", git = "https://github.com/davnotdev/trowel", features = ["sdcard"] }
nanorand = { version = "0.7", default-features = false, features = ["wyrand"] }
arrayvec = { version = "0.7.4", default-features = false }
numtoa = "0.2.4"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
rp-pico = { version = "0.7.0", git = "https://github.com/shanecelis/rp-hal-boards.git", features = ["rtic-monotonic"] }
rp2040-hal = { version = "0.8.0", features=["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
cortex-m = { version = "0.7.0", features = ["inline-asm", "critical-section"] }
cortex-m-rt = "0.7.3"
embedded-hal = { version = "0.2.5", features=["unproven"] }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
# lto = 'fat'
opt-level = 3
overflow-checks = false
